--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+.logo img{
+  width: 75px;
+  height: 75px;
+  position: sticky;
+  right: 1%;
+  top: 110%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
