--- a/src/Components/BookCard.css
+++ b/src/Components/BookCard.css
@@ -1,22 +1,36 @@
-.books{
-    min-width: 25%;
-    background: #E3A230;
-    transition: .3s ease;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0,.3);
-    transition: .2s ease;
-    cursor: pointer;
+.books {
+  min-width: 20%;
+  background: #e3a230;
+  transition: 0.3s ease;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+  transition: 0.2s ease;
+  cursor: pointer;
 }
 
-.books:hover{
-    transform: translateY(-15px);
+.books:hover {
+  transform: translateY(-15px);
 }
 
-.books .image{
-    width: 80%;
-    vertical-align: top;
+.books .image {
+  width: 80%;
+  vertical-align: top;
 }
 
-.books .image img{
-    height: 500px;
-    width: 325px;
+.books .image img {
+  height: 500px;
+  width: 100%;
+  object-fit: contain;
+  object-position: center;
+}
+
+@media screen and (max-width: 800px) {
+  .books .image img {
+    height: 250px;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .books .image img {
+    height: 350px;
+  }
 }
