--- a/src/Components/BookCard.css
+++ b/src/Components/BookCard.css
@@ -18,7 +18,7 @@
 
 .books .image img {
   height: 500px;
-  width: 100%;
+  /* width: 100%; */
   object-fit: contain;
   object-position: center;
 }
