--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,39 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #3F3A3A;
+  background-color: #3f3a3a;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.modal-background {
+  position: fixed;
+  right: 0;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 3;
+  background-color: rgba(10, 10, 10, 0.86);
+}
+
+.modal-card {
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  display: block;
+  width: 1000px;
+  height: 750px;
+  background-color: #e3a230;
+  border-radius: 5px;
+  padding: 15px;
+}
+.modal-description {
+  text-align: start;
 }
